# study_vector

./: .dockerignore  .editorconfig  .gitignore  README.md  justfile
backends/python/: README.md  justfile  pyproject.toml
backends/python/config/: .env.example  dev.env  prod.env  test.env
backends/python/deploy/: .dockerignore  Dockerfile
backends/python/scripts/: add_additional_properties.py  patch_openapi_responses.py
backends/python/src/study_vector/: __init__.py  dependencies.py  exceptions.py  main.py
backends/python/src/study_vector/api/: __init__.py  exception_handlers.py  responses.py
backends/python/src/study_vector/api/v1/: __init__.py  alias.py  collections.py  databases.py  health.py  hybrid_search.py  indexes.py  partitions.py  query.py  users.py  vectors.py
backends/python/src/study_vector/core/: __init__.py  logging.py  settings.py
backends/python/src/study_vector/domain/: __init__.py  models.py
backends/python/src/study_vector/infra/: __init__.py
backends/python/src/study_vector/infra/milvus/: __init__.py  client.py  repository.py
backends/python/src/study_vector/repositories/: __init__.py  base.py
backends/python/tests/: __init__.py
backends/python/tests/contract/: test_openapi_compliance.py
backends/python/tests/integration/: __init__.py  _fake_repo.py  test_api.py
backends/python/tests/tutorials/: conftest.py  test_01_schema_basics.py  test_02_index_types.py  test_03_distance_metrics.py  test_04_scalar_filter.py  test_05_consistency_level.py  test_06_hybrid_search.py  test_07_partitions.py  test_08_aliases.py  test_09_vector_types.py
backends/python/tests/unit/: __init__.py  test_milvus_repository.py
contracts/: openapi.yaml
deploy/: .env.example  _body_create.json  _body_delete.json  _body_get.json  (+5 more)
(+67 files in other folders)
