[project]
name = "study-vector"
version = "0.1.0"
description = "向量数据库学习平台 - Python 后端（FastAPI + pymilvus）"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "study_vector contributors" }
]
keywords = ["vector-database", "milvus", "fastapi", "research"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Database",
    "Typing :: Typed",
]

# 运行时依赖
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "pymilvus>=2.4.4",
]

# 开发依赖
[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "openapi-spec-validator>=0.9.0",
    "schemathesis>=4.21.10",
    "hypothesis>=6.155.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/study_vector"]

# ---------- 工具配置 ----------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
# B008：FastAPI Depends 写在默认值上是官方推荐用法
# UP042：StrEnum 在 Py3.11 之前不存在，向后兼容考虑保留 str+Enum
ignore = ["E501", "B008", "UP042"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "tests", "."]
addopts = "-v --tb=short"
